# asg_cam

./: .gitignore  port_assingment.md  run_services.sh  setup.cfg
base/: BaseService.py
controller/: conf.json  controller.py
helpers/: MessageManager.py
services/battery/: battery_service.py  conf.json
services/camera/: camera_service.py  conf.json
services/gpio/: conf.json  gpio_service.py
tests/eventloop_communication_test/: TestBatteryService.py  TestController.py  run.sh
tests/eventloop_test/: main.py
