[metadata]
name = asgcam
version = 1.0
author = Paweł Dyrda
author_email = pawdyr3@gmail.com
description = Software for ASG Camera
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = 
    base
    helpers